quorum/test/tests/TypeChecker/Pass/TypeInferenceLiterals.quorum
a = 1
b = 1.9
c = true
d = "hello"

print a
print b
print c
print d