quorum/test/tests/TypeChecker/Fail/TypeInferenceDifferentLiteralTypes.quorum
a = 1 + 1.9
b = 1.9 + 1
c = true and true or 1
d = "hello" + 1